--- a/signin.html
+++ b/signin.html
@@ -29,7 +29,7 @@
             <div class="slider-tab"></div>
          </div>
          <div class="form-inner">
-            <form action="index.html" class="login">
+            <form action="client.html" class="login">
                <div class="field">
                   <input type="email" placeholder="Email Address" required>
                </div>
