--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
     <header>
         <div class="header-1">
 
-            <a href="" class="logo"><i class=></i></i>VENDIt<font style="color: #e03a3c">.</font></a>
+            <a href="client.html" class="logo"><i class=></i></i>VENDIt<font style="color: #e03a3c">.</font></a>
 
             <form action="" class="search-box-container">
                 <input type="search" id="search-box" placeholder="search here...">
@@ -34,13 +34,13 @@
             <div id="menu-bar" class="fas fa-bars"></div>
 
             <nav class="navbar">
-                <a href="#home">home</a>
-                <a href="#home">category</a>
-                <a href="#home">contact</a>
+                <a href="client.html">home</a>
+                <a href="category.html">category</a>
+                <a href="contact.html">contact</a>
             </nav>
             <div class="icons">
-                <a href="#" class="fas fa-shopping-cart"></a>
-                <a href="#" class="fas fa-user-circle"></a>
+                <a href="cart.html" class="fas fa-shopping-cart"></a>
+                <a href="profile.html" class="fas fa-user-circle"></a>
             </div>
         </div>
     </header>
