--- a/signin.html
+++ b/signin.html
@@ -47,7 +47,7 @@
                   Not a member? <a href="">Signup now</a>
                </div>
             </form>
-            <form action="index.html" onsubmit="return Form()" name="sign" class="signup">
+            <form action="index.html" onsubmit=" Form()" name="sign" class="signup">
                <div class="field">
                   <input type="email" placeholder="Email Address" required>
                </div>
