--- a/vendor2.html
+++ b/vendor2.html
@@ -16,6 +16,7 @@
 
     <body>
         <div class="container-fluid">
+            <div class="changebutton" onclick="changeMap()"></div>
             <div class="map-responsive" id="map">
                 <iframe
                     src="https://www.google.com.qa/maps/d/u/0/embed?mid=1xbaZ90--SGCVb7xFYm1P55nXg80OROrr&ehbc=2E312F"
@@ -23,11 +24,6 @@
                     height="480"
                 ></iframe>
             </div>
-            <iframe
-                src="https://www.google.com.qa/maps/d/u/0/embed?mid=1bfbEdnGuKjOhaYZHvLFBBWPbca0fwsYs&ehbc=2E312F"
-                width="640"
-                height="480"
-            ></iframe>
         </div>
         <script src="demo.js"></script>
     </body>
