--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
     <header>
         <div class="header-1">
 
-            <a href="client.html" class="logo"><i class=></i></i>VENDIt<font style="color: #e03a3c">.</font></a>
+            <a href="index.html" class="logo"><i class=></i></i>VENDIt<font style="color: #e03a3c">.</font></a>
 
             <form action="" class="search-box-container">
                 <input type="search" id="search-box" placeholder="search here...">
@@ -34,7 +34,7 @@
             <div id="menu-bar" class="fas fa-bars"></div>
 
             <nav class="navbar">
-                <a href="client.html">home</a>
+                <a href="index.html">home</a>
                 <a href="category.html">category</a>
                 <a href="contact.html">contact</a>
             </nav>
