--- a/client.html
+++ b/client.html
@@ -90,10 +90,9 @@
   <div class="container d-flex justify-content-center">
     <div class="row">
       <div class="col">
-        <div class="card d-flex justify-content-center">
-          <img src="https://www.healthyeating.org/images/default-source/home-0.0/nutrition-topics-2.0/general-nutrition-wellness/2-2-2-2foodgroups_vegetables_detailfeature.jpg?sfvrsn=226f1bc7_6" height="200" width="300">
-          <strong><font style="color: #e03a3c; font-size: large;" class="d-flex justify-content-center"> Vegetables </font></strong><br>
-
+      <div class="card d-flex justify-content-center">
+          <a href="vegetables.html"><img src="https://www.healthyeating.org/images/default-source/home-0.0/nutrition-topics-2.0/general-nutrition-wellness/2-2-2-2foodgroups_vegetables_detailfeature.jpg?sfvrsn=226f1bc7_6" height="200" width="300"></a><br>
+          <strong><font style="color: #e03a3c; font-size: large;" class="d-flex justify-content-center"> Vegetables </font></strong>
         </div>
     </div>
       <div class="col">
