modified some files

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
             <div id="menu-bar" class="fas fa-bars"></div>
 
             <nav class="navbar">
-                <a href="#home">home</a>
-                <a href="#home">category</a>
-                <a href="#home">contact</a>
+                <a href="index.html">home</a>
+                <a href="#category">category</a>
+                <a href="">contact</a>
+                <a href="#home">NearBy</a>
             </nav>
             <div class="icons">
                 <a href="cart.html" class="fas fa-shopping-cart"></a>
@@ -87,7 +88,7 @@
 </section>
   <br>
   <br>
-  <div class="container d-flex justify-content-center">
+  <div class="container d-flex justify-content-center" id="category">
     <div class="row">
       <div class="col">
       <div class="card d-flex justify-content-center">
@@ -101,6 +102,13 @@
           <strong><font style="color: #e03a3c; font-size: large;" class="d-flex justify-content-center"> Fruits </font></strong><br>
 
         </div>
+        <div class="col">
+          <div class="card d-flex justify-content-center">
+            <img src="https://www.healthyeating.org/images/default-source/home-0.0/nutrition-topics-2.0/general-nutrition-wellness/2-2-2-3foodgroups_fruits_detailfeature.jpg?sfvrsn=64942d53_4" height="200" width="300">
+            <strong><font style="color: #e03a3c; font-size: large;" class="d-flex justify-content-center"> Fruits </font></strong><br>
+  
+          </div>
+          
     </div>
 
     
