modified index and vendor

--- a/vendor2.html
+++ b/vendor2.html
@@ -19,7 +19,7 @@
         <header>
             <div class="header-1">
     
-                <a href="" class="logo"><i class=></i></i>VENDIt<font style="color: #e03a3c">.</font></a>
+                <a href="index.html" class="logo"><i class=></i></i>VENDIt<font style="color: #e03a3c">.</font></a>
 
             </div>
     
