--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="index.html">home</a>
                 <a href="#category">category</a>
                 <a href="">contact</a>
-                <a href="#home">NearBy</a>
+                <a href="vendor2.html">NearBy</a>
             </nav>
             <div class="icons">
                 <a href="cart.html" class="fas fa-shopping-cart"></a>
